@@ -1,4 +1,15 @@
 
+Изменения в nginx 1.2.6                                           11.12.2012
+
+    *) Добавление: переменные $request_time и $msec теперь можно
+       использовать не только в директиве log_format.
+
+    *) Исправление: cache manager и cache loader могли не запускаться, если
+       использовалось более 512 listen-сокетов.
+
+    *) Исправление: в модуле ngx_http_dav_module.
+
+
 Изменения в nginx 1.2.5                                           13.11.2012
 
     *) Добавление: параметр optional_no_ca директивы ssl_verify_client.
